fix: removing excessive bottom gap on restraunts page

--- a/frontend-apps/14/css/styles.css
+++ b/frontend-apps/14/css/styles.css
@@ -294,7 +294,7 @@ nav h1 a {
 }
 
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 30px 40px 0;
 }
 
 #reviews-container h2 {
